--- a/Styles.css
+++ b/Styles.css
@@ -1,4 +1,3 @@
-/* Resetting default browser styles */
 * {
     margin: 0;
     padding: 0;
@@ -6,70 +5,65 @@
 }
 
 html, body {
-    min-height: 100%; /* Ensure at least the full height of the viewport */
+    min-height: 100%;
     display: flex;
-    flex-direction: column; /* Arrange children in a column */
-}
-
-body {
-    margin: 0;
-    padding: 0;
+    flex-direction: column;
     font-family: "ABeeZee", sans-serif;
 }
 
-/* Header styling */
 .header {
-
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #D9D9D9;
     height: 152px;
     padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     position: relative;
 }
+
 .header-logo {
-    text-decoration: none; /* Removes the underline from the link */
-    color: black; /* Set the color to black or any color your design uses */
-    /* Other styles for your logo */
+    text-decoration: none;
+    color: black;
 }
 
 .header-logo h1 {
-    margin: 0; /* Adjust as needed */
-    margin-left: 90px;
+    margin: 0;
     font-size: 24px;
 }
 
-/* Main content area */
 .main-content {
-    flex-grow: 1; /* Allow the main content to grow and take up available space */
+    flex-grow: 1;
     padding: 1rem;
     display: flex;
     flex-direction: column;
     font-size: 24px;
-    justify-content: center; /* Center items vertically if there's space */
-    align-items: center; /* Center items horizontally */
+    justify-content: center;
+    align-items: center;
 }
 
-.main-content > div { /* Assuming only .grid-item divs are direct children */
-    background-color: #f0f0f0;
-    height: 122px; /* Specific height for child items */
-    width: 258px; /* Specific width for child items */
-    margin-top: 30px; /* Margin-top for child items */
-    display: flex; /* Use flexbox to center content */
-    justify-content: center; /* Center text horizontally within the child */
-    align-items: center; /* Center text vertically within the child */
-    text-align: center; /* Center text if it wraps to more than one line */
+.main-content a {
+    text-decoration: none;
+    display: inline-block;
+    width: 258px;
+    height: 122px;
+    padding: 20px;
+    margin: 20px;
+    background-color: #d9d9d9;
+    color: #000000;
+    border-radius: 5%;
+    font-size: 24px;
+    line-height: 75px;
+    text-align: center;
+    transition: background-color 0.3s;
 }
 
+.main-content a:hover {
+    background-color: #0056b3;
+}
 
-/* Footer styling */
 .footer {
     background-color: #D9D9D9;
-    height: 152px; /* Fixed footer height */
+    height: 152px;
     display: flex;
     justify-content: space-between;
     padding: 1rem;
@@ -77,15 +71,14 @@ body {
 }
 
 .footer-section {
-    /* Flexbox allows even spacing and vertical center alignment */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex: 1; /* This will make sure each section takes equal space */
+    flex: 1;
 }
 
-.footer-section h3 {
+.footer-section h2 {
     margin-bottom: 0.5rem;
 }
 
@@ -94,6 +87,7 @@ body {
     color: #000;
     text-decoration: none;
 }
+
 .sidebar a {
     display: flex;
     color: #000;
@@ -102,6 +96,7 @@ body {
     margin: 2px 2px ;
     font-size: 20px;
 }
+
 button {
     display: flex;
     align-items: end;
@@ -109,37 +104,33 @@ button {
 }
 
 .main-nav button {
-    position: absolute; /* Absolute positioning relative to header */
-    right: 1rem; /* 1rem from the right edge of the header */
-    bottom: 1rem; /* 1rem from the bottom edge of the header */
-    background: transparent; /* No background for the button */
-    border: none; /* No border for the button */
-    color: #000; /* Text color for the button */
-    padding: 2px; /* Padding around the text */
+    position: absolute;
+    right: 1rem;
+    bottom: 1rem;
+    background: transparent;
+    border: none;
+    color: #000;
+    padding: 2px;
     cursor: pointer;
     font-size: 20px;
-    /* other styles you may want for the button */
 }
+
 h2 {
     font-style: normal;
     font-size: 15px;
 }
 
-/* iPhone 14 Pro Max and smaller devices */
 @media (max-width: 430px) {
-    /* Adjust the main content grid to a single column layout */
     .main-content {
         display: flex;
         flex-direction: column;
     }
 
     .grid-item {
-        /* Full width for small screens */
         width: 100%;
-        margin-bottom: 10px; /* Keep space between items */
+        margin-bottom: 10px;
     }
 
-    /* Ensure footer is at the bottom */
     .footer {
         width: 100%;
         position: absolute;
